# Face-Recognition-Attendance-System

./: .env  README.md  app.py  build.sh  config.py  face_recognition_system.py  face_recognition_utils.py  models.py  netlify.md  netlify_requirements.txt  pyproject.toml  render.yaml  render_deployment_guide.md  render_env_variables.txt  requirements.txt  simple_face_recognition.py  utils.py
.github/: COMMIT_EDITMSG  FETCH_HEAD  config  index
.github/logs/: HEAD
.github/refs/heads/: main  replit-agent
heads/: replit-agent
instance/: attendance.db  attendance_system.db
routes/: __init__.py  admin.py  auth.py  student.py  teacher.py
static/css/: custom.css  style.css
static/js/: attendance.js  camera.js  dashboard.js  face_recognition.js  webcam.js
templates/: 404.html  500.html  base.html  database_viewer.html  edit_attendance.html  edit_student.html  edit_teacher.html  index.html  layout.html  login.html  manage_students.html  mark_attendance.html  register.html  student_dashboard.html  student_register.html  teacher_dashboard.html  teacher_register.html  view_attendance.html
templates/admin/: add_admin.html  dashboard.html  settings.html  students.html  subjects.html  teachers.html
templates/student/: dashboard.html  mark_attendance.html  mark_manual_attendance.html  register.html  register_face.html  view_attendance.html
templates/teacher/: attendance_entry.html  dashboard.html  notifications.html  profile.html  register.html  semester_page.html  settings.html
utils/: email_service.py  export.py  face_recognition.py  supabase.py
(+4 files in other folders)
